--- a/projects/wine-pair/package.json
+++ b/projects/wine-pair/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +16,9 @@
     "express": "^4.16.3",
     "mongoose": "^5.2.16",
     "morgan": "^1.9.1"
+  },
+  "proxy": "http://localhost:8000",
+  "engines": {
+    "node": "8.12.0"
   }
 }
